--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Karla|Playfair+Display|Lato|Lora|Elsie|Montserrat:100,200,300');
+
 header {
     padding: 50px;
     background-color: #E4FAF7;
@@ -22,12 +24,12 @@ body {
 }
 
 .assignment {
-    width: 100%;
-    padding: 10px;
+    width: 90%;
+    padding: 5%;
     margin: auto;
-    border: #000000 1px;
 }
 
-#name {
-    font-family: 'Times New Roman', Times, serif;
+.name {
+    font-family: 'Karla';
+    font-size: 18pt;
 }
