--- a/mystyle.css
+++ b/mystyle.css
@@ -1,42 +1,124 @@
-@import url('https://fonts.googleapis.com/css?family=Karla|Playfair+Display|Lato|Lora|Elsie|Montserrat:100,200,300');
+@import url("https://fonts.googleapis.com/css?family=Karla|Playfair+Display|Lato|Lora|Elsie|Montserrat:100,200,300");
 
 header {
-    padding: 50px;
-    background-color: #E4FAF7;
-  }
+  padding: 50px;
+  background-color: #e4faf7;
+}
 
 body {
-    background-color: #8DBCB4;
-    padding: 0 0 0 0;
-    margin: auto;
-    color: #FFF;
-  }
+  background-color: #8dbcb4;
+  padding: 0 0 0 0;
+  margin: auto;
+  color: #fff;
+}
 
 .imgbox {
-    display: grid;
-    height: 100%;
+  display: grid;
+  height: 100%;
 }
 
 .center-fit {
-    max-width: 80%;
-    max-height: 80vh;
-    margin: auto;
+  max-width: 80%;
+  max-height: 80vh;
+  margin: auto;
 }
 
 .assignment {
-    width: 90%;
-    padding: 5%;
-    margin: auto;
+  width: 90%;
+  padding: 5%;
+  margin: auto;
 }
 
 .name {
-    font-family: 'Karla';
-    font-size: 18pt;
-    float: left;
+  font-family: "Karla";
+  font-size: 18pt;
+  float: left;
 }
 
 .due-date {
-    font-family: 'Karla';
-    font-size: 18pt;
-    float: right;
+  font-family: "Karla";
+  font-size: 18pt;
+  float: right;
+}
+
+.add-event-button {
+  background: #43d0a2;
+  background: linear-gradient(#43d0a2, #7cadda);
+  border-radius: 300px;
+  outline: 0;
+  padding: 10px 20px;
+  color: #ffffff;
+  display: inline-block;
+  font-family: "Karla";
+  font-size: 18pt;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+}
+
+.form {
+  font-family: "Karla";
+}
+
+#popup {
+  display: flex;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  margin: auto;
+  align-items: center;
+  background-color: rgb(170, 170, 170, 0.5);
+}
+
+#popup-note {
+  background-color: white;
+  position: fixed;
+  height: 50%;
+  width: 50%;
+  left: 24%;
+  margin: auto;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  overflow: auto;
+}
+
+.popup-content {
+  font-family: "Karla";
+  text-align: center;
+}
+
+footer {
+  padding: 5%;
+  width: 90%;
+  font-family: "Karla";
+  text-align: center;
+  font-size: 10pt;
+  color: #587973;
+  background-color: #e4faf7;
+}
+
+/* Progress Bar */
+#myBar {
+  width: 100%;
+  height: 30px;
+  background-color: #4caf50;
+  text-align: center;
+  line-height: 30px;
+  color: white;
+}
+
+#myBar2 {
+  width: 10%;
+  height: 30px;
+  background-color: #4caf50;
+  text-align: center;
+  line-height: 30px;
+  color: white;
 }
